[package]
name = "actix-geoip"
version = "0.1.0"
edition = "2021"
description = "Ultra-light, zero-allocation GeoIP lookup micro-service built on Actix-web."
license = "MIT"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros", "compress-gzip"] }
maxminddb = { version = "0.23", default-features = false }
bytes = "1.10.1"
num_cpus = "1.17.0"
ryu = "1"
tokio = { version = "1", features = ["full"] }
socket2 = "0.6"
memchr = "2"
anyhow = "1.0"

[profile.release]
# Optimize for minimal binary size
#opt-level = "z"
opt-level = 3
# Enable link-time optimization
lto = true
# Strip debug symbols
strip = true
# Single codegen unit for better optimization
codegen-units = 1
# Avoid extra code on panic
panic = "abort"
# Disable overflow checks to improve performance
#overflow-checks = false
debug=false

# macOS-specific optimizations
#[target.x86_64-apple-darwin]
#rustflags = ["-C", "target-cpu=native"]

# Linux-specific static linking optimizations
#[target.x86_64-unknown-linux-gnu]
#rustflags = ["-C", "target-feature=+crt-static", "-C", "target-cpu=native"]
